final stretch...need to fix menu issue

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,30 +1,37 @@
-
+.hr-line {
+    border: 0.5px solid #0f1f2f;
+    width: 100%;
+    margin-top: 20px;
+}
 .footer{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 20px 20px 30px;
 }
-
-.spacing-1{
-    margin-bottom: 30px;
+.spacing-1 {
+    margin-bottom: 10px;
 }
-
-.spacing-2{
-    margin-bottom: 29.2px;
+.spacing-2 {
+    margin-bottom: 10px;
 }
-
-@media only screen and (min-width: 600px){
+@media (min-width: 1000px){
     .footer{
         display: flex;
         flex-direction: row;
-        width: 100%;
+        align-items: center;
+        width: 1000px;
         justify-content: space-between;
+        max-width: 100%;
+        margin: 0 auto;
+        padding: 20px 20px 30px;
     }
-
-    /* .spacing-1{
-        margin-right: 244px;
-    } 
-
-    .spacing-2{
-        margin-right: 274px;
-    }  */
+    .spacing-1 {
+        margin-bottom: 0;
+    }
+    .spacing-2 {
+        margin-bottom: 0;
+    }
 }
