--- a/src/components/FullLogo/Logo.css
+++ b/src/components/FullLogo/Logo.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: row;
     margin: auto;
+    justify-content: center;
+    align-items: baseline;
 }
 
 .logo-word-modern {
